--- a/nestjs-front/src/app/home/home.component.html
+++ b/nestjs-front/src/app/home/home.component.html
@@ -1,32 +1,63 @@
-  
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Document</th>
-      <th scope="col">Description</th>
-      <th scope="col">Created</th>
-      <th scope="col">Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let user of users$">
-       <td>
-        <ngb-highlight [result]="user.name"></ngb-highlight>
-      </td>
-      <td><ngb-highlight [result]="user.last_name"></ngb-highlight></td>
-      <td><ngb-highlight [result]="user.email"></ngb-highlight></td>
-      <td><ngb-highlight [result]="user.phone | mask: '(00) 00000-0000'"></ngb-highlight></td>
-      <td><ngb-highlight [result]="user.document | mask: '000.000.000-00'"></ngb-highlight></td>
-      <td><ngb-highlight [result]="user.description"></ngb-highlight></td>
-      <td><ngb-highlight [result]="user.created_at | date: 'dd/MM/yyyy'"></ngb-highlight></td>
-      <td>
-        <i class="fa fa-times"></i>
-        <i class="fa fa-edit"></i>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+<div class="row justify-content-center align-items-cente">
+  <div class="col-sm-12">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Email</th>
+          <th scope="col">Phone</th>
+          <th scope="col">Document</th>
+          <th scope="col">Description</th>
+          <th scope="col">Created</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <td>
+            <ngb-highlight [result]="user.name"></ngb-highlight>
+          </td>
+          <td>
+            <ngb-highlight [result]="user.last_name"></ngb-highlight>
+          </td>
+          <td>
+            <ngb-highlight [result]="user.email"></ngb-highlight>
+          </td>
+          <td>
+            <ngb-highlight [result]="user.phone | mask: '(00) 00000-0000'"></ngb-highlight>
+          </td>
+          <td>
+            <ngb-highlight [result]="user.document | mask: '000.000.000-00'"></ngb-highlight>
+          </td>
+          <td>
+            <ngb-highlight [result]="user.description"></ngb-highlight>
+          </td>
+          <td>
+            <ngb-highlight [result]="user.created_at | date: 'dd/MM/yyyy'"></ngb-highlight>
+          </td>
+          <td>
+            <i class="fa fa-times" (click)="openVerticallyCentered(content, user._id)"></i>
+            <i class="fa fa-edit"></i>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Delete customer</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this customer?</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="deleteCustomer()">Yes</button>
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">No</button>
+  </div>
+</ng-template>
