--- a/nestjs-front/src/app/home/home.component.scss
+++ b/nestjs-front/src/app/home/home.component.scss
@@ -5,3 +5,15 @@ i{
     padding-right: 10px;
     margin-left: 5px;
 }
+
+.bold{
+    font-weight: bold;
+}
+
+.close{
+    outline: none;
+}
+
+.user-name{
+    color: #5b5bff;
+}
