--- a/nestjs-front/src/app/home/home.component.html
+++ b/nestjs-front/src/app/home/home.component.html
@@ -37,8 +37,8 @@
             <ngb-highlight [result]="user.created_at | date: 'dd/MM/yyyy'"></ngb-highlight>
           </td>
           <td>
-            <i class="fa fa-times" (click)="openVerticallyCentered(content, user._id)"></i>
-            <i class="fa fa-edit"></i>
+            <i class="fa fa-times" (click)="openDeleteModal(deleteModal, user)"></i>
+            <i class="fa fa-edit" (click)="openEditModal(editModal, user)"></i>
           </td>
         </tr>
       </tbody>
@@ -46,18 +46,85 @@
   </div>
 </div>
 
-<ng-template #content let-modal>
+<!-- Delete modal -->
+<ng-template #deleteModal let-modal>
   <div class="modal-header">
-    <h4 class="modal-title">Delete customer</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
+    <h4 class="modal-title">Customer deletion</h4>
+    <button type="button" class="close" (click)="modal.dismiss('Cross click')">
+      <span>&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <p>Are you sure you want to delete this customer?</p>
+    <p class="bold">Are you sure you want to delete <span class="user-name">"{{user.name}}"</span> ?</p>
+    <p>All information associated to this user profile will be permanently deleted. This operation can not be undone.
+    </p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-light" (click)="deleteCustomer()">Yes</button>
-    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">No</button>
+    <button type="button" class="btn btn-danger btn-md" (click)="deleteCustomer()">CONFIRM</button>
+    <button type="button" class="btn btn-secondary btn-md" (click)="modal.close('Close click')">CANCEL</button>
   </div>
+</ng-template>
+
+<!-- Edit modal -->
+<ng-template #editModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Edit</h4>
+    <button type="button" class="close" (click)="modal.dismiss('Cross click')">
+      <span>&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+
+    <form>
+
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" [(ngModel)]="user.name" name="user.name">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="lastName" class="col-sm-2 col-form-label">Last Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" [(ngModel)]="user.last_name" name="user.last_name">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" [(ngModel)]="user.email" name="user.email">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" [(ngModel)]="user.phone" name="user.phone" [clearIfNotMatch]="true" mask="(00) 00000-0000">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="document" class="col-sm-2 col-form-label">Document</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" [(ngModel)]="user.document" name="user.document" [clearIfNotMatch]="true"  mask="000.000.000-00">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="description" class="col-sm-2 col-form-label">Description</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" [(ngModel)]="user.description" name="user.description">
+        </div>
+      </div>
+
+    </form>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary btn-md" (click)="updateCustomer(user)">CONFIRM</button>
+    <button type="button" class="btn btn-secondary btn-md" (click)="modal.close('Close click')">CANCEL</button>
+  </div>
+
 </ng-template>
