--- a/nestjs-front/src/app/home/home.component.html
+++ b/nestjs-front/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center align-items-cente">
+<div class="row justify-content-center align-items-center">
   <div class="col-sm-12">
     <table class="table table-striped">
       <thead>
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of users">
+        <tr *ngFor="let user of users | paginate: { itemsPerPage: 10, currentPage: p}">
           <td>
             <ngb-highlight [result]="user.name"></ngb-highlight>
           </td>
@@ -42,7 +42,9 @@
           </td>
         </tr>
       </tbody>
+
     </table>
+    <pagination-controls (pageChange)="p = $event" responsive="true"></pagination-controls>
   </div>
 </div>
 
@@ -101,14 +103,16 @@
       <div class="form-group row">
         <label for="phone" class="col-sm-2 col-form-label">Phone</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" [(ngModel)]="user.phone" name="user.phone" [clearIfNotMatch]="true" mask="(00) 00000-0000">
+          <input type="text" class="form-control" [(ngModel)]="user.phone" name="user.phone" [clearIfNotMatch]="true"
+            mask="(00) 00000-0000">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="document" class="col-sm-2 col-form-label">Document</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" [(ngModel)]="user.document" name="user.document" [clearIfNotMatch]="true"  mask="000.000.000-00">
+          <input type="text" class="form-control" [(ngModel)]="user.document" name="user.document"
+            [clearIfNotMatch]="true" mask="000.000.000-00">
         </div>
       </div>
 
