--- a/nestjs-front/src/app/app.component.html
+++ b/nestjs-front/src/app/app.component.html
@@ -1,13 +1,3 @@
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-sm-12 text-center">
-            <span routerLink="home">Home</span>
-            <span class="p-2">|</span>
-            <span routerLink="create">Create</span>
-        </div>
-    </div>
-</div>
-
-<div class="container">
+<div class="container-fluid">
     <router-outlet></router-outlet>
 </div>
