--- a/nestjs-front/src/app/components/auth/create/create.component.html
+++ b/nestjs-front/src/app/components/auth/create/create.component.html
@@ -1,5 +1,5 @@
-<div class="row justify-content-center align-items-center">
-    <div class="col-sm-8">
+<div class="row justify-content-center align-items-center p-3">
+    <div class="col-sm-5">
         <form [formGroup]="createForm" (ngSubmit)="create()" class="box">
 
             <div class="form-group row">
@@ -63,8 +63,8 @@
                 </div>
             </div>
 
-            <div class="form-group row">
-                <label for="document" class="col-sm-2 col-form-label">Document No</label>
+            <!-- <div class="form-group row">
+                <label for="document" class="col-sm-2 col-form-label">Document</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="document" mask="000.000.000-00" [clearIfNotMatch]="true"
                         placeholder="CPF" formControlName="document" required>
@@ -90,7 +90,7 @@
                         </ngb-alert>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="form-group row">
                 <label for="description" class="col-sm-2 col-form-label">Password</label>
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <button type="type" class="btn btn-primary btn-lg btn-block" [disabled]="createForm.get('name').hasError('required') || 
+            <button type="button" class="btn btn-success btn-lg" [disabled]="createForm.get('name').hasError('required') || 
                     createForm.get('last_name').hasError('required') || 
                     createForm.get('email').hasError('required') ||
                     createForm.get('email').hasError('pattern') ||
@@ -115,6 +115,10 @@
                     createForm.get('description').hasError('required') ||
                     createForm.get('password').hasError('required')">
                 Create
+            </button>
+
+            <button class="btn btn-primary btn-lg ml-2" routerLink="/">
+                Login
             </button>
         </form>
     </div>
