--- a/nestjs-front/src/app/components/auth/login/login.component.html
+++ b/nestjs-front/src/app/components/auth/login/login.component.html
@@ -1,52 +1,43 @@
-<div class="row justify-content-center align-items-center p-3">
-    <div class="col-sm-5">
-        <form [formGroup]="createForm" (ngSubmit)="create()" class="box">
+<form [formGroup]="loginForm" (ngSubmit)="login()">
 
-            <div class="form-group row">
-                <label for="email" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="text" pattern="^\S+@\S+$" class="form-control" id="email"
-                        placeholder="example@email.com" formControlName="email" required>
+    <div class="form-group row">
+        <label for="email" class="col-sm-3 col-form-label">Email</label>
+        <div class="col-sm-12">
+            <input type="text" pattern="^\S+@\S+$" class="form-control" id="email" placeholder="example@email.com"
+                formControlName="email" required>
 
-                    <div *ngIf="createForm.get('email').hasError('required') && createForm.get('email').touched">
-                        <ngb-alert [dismissible]="false" type="warning">
-                            <strong> <i class="fa fa-info-circle"></i> Email</strong> is required
-                        </ngb-alert>
-                    </div>
-
-                    <div *ngIf="createForm.get('email').hasError('pattern') && createForm.get('email').touched">
-                        <ngb-alert [dismissible]="false" type="warning">
-                            <strong> <i class="fa fa-info-circle"></i> Email</strong> is invalid
-                        </ngb-alert>
-                    </div>
-                </div>
+            <div *ngIf="loginForm.get('email').hasError('required') && loginForm.get('email').touched">
+                <ngb-alert [dismissible]="false" type="warning">
+                    <strong> <i class="fa fa-info-circle"></i> Email</strong> is required
+                </ngb-alert>
             </div>
 
-            <div class="form-group row">
-                <label for="description" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="description" placeholder="Password"
-                        formControlName="password" required>
-
-                    <div *ngIf="createForm.get('password').hasError('required') && createForm.get('password').touched">
-                        <ngb-alert [dismissible]="false" type="warning">
-                            <strong> <i class="fa fa-info-circle"></i> Password</strong> is required
-                        </ngb-alert>
-                    </div>
-                </div>
+            <div *ngIf="loginForm.get('email').hasError('pattern') && loginForm.get('email').touched">
+                <ngb-alert [dismissible]="false" type="warning">
+                    <strong> <i class="fa fa-info-circle"></i> Email</strong> is invalid
+                </ngb-alert>
             </div>
-
-            <button type="button" class="btn btn-success btn-lg" [disabled]="createForm.get('email').hasError('required') ||
-                        createForm.get('email').hasError('pattern') ||
-                        createForm.get('password').hasError('required')">
-                Create
-            </button>
-
-            <button class="btn btn-primary btn-lg ml-2" routerLink="/create">
-                Creates
-            </button>
-        </form>
+        </div>
     </div>
-</div>
 
-<a routerLink="create">CREATE</a>
+    <div class="form-group row">
+        <label for="description" class="col-sm-3 col-form-label">Password</label>
+        <div class="col-sm-12">
+            <input type="password" class="form-control" id="description" placeholder="Password"
+                formControlName="password" required>
+
+            <div *ngIf="loginForm.get('password').hasError('required') && loginForm.get('password').touched">
+                <ngb-alert [dismissible]="false" type="warning">
+                    <strong> <i class="fa fa-info-circle"></i> Password</strong> is required
+                </ngb-alert>
+            </div>
+        </div>
+    </div>
+
+    <button type="button" class="btn btn-success btn-lg" [disabled]="loginForm.get('email').hasError('required') ||
+                        loginForm.get('email').hasError('pattern') ||
+                        loginForm.get('password').hasError('required')">
+        Login
+    </button>
+
+</form>
