--- a/nestjs-front/src/app/components/auth/create/create.component.html
+++ b/nestjs-front/src/app/components/auth/create/create.component.html
@@ -1,15 +1,10 @@
-<form [formGroup]="createForm" (ngSubmit)="create()">
+<form [formGroup]="createForm" (ngSubmit)="create()" class="login-section">
 
     <div class="form-group row">
         <label for="name" class="col-sm-3 col-form-label">Name</label>
         <div class="col-sm-12">
             <input type="text" class="form-control" id="firstName" placeholder="Enter first name" formControlName="name"
                 required>
-            <div *ngIf="createForm.get('name').hasError('required') && createForm.get('name').touched">
-                <ngb-alert [dismissible]="false" type="warning">
-                    <strong> <i class="fa fa-info-circle"></i> Name</strong> is required
-                </ngb-alert>
-            </div>
         </div>
     </div>
 
@@ -18,11 +13,6 @@
         <div class="col-sm-12">
             <input type="text" class="form-control" id="lasttName" placeholder="Enter last name"
                 formControlName="last_name" required>
-            <div *ngIf="createForm.get('last_name').hasError('required') && createForm.get('last_name').touched">
-                <ngb-alert [dismissible]="false" type="warning">
-                    <strong> <i class="fa fa-info-circle"></i> Last name </strong> is required
-                </ngb-alert>
-            </div>
         </div>
     </div>
 
@@ -31,18 +21,6 @@
         <div class="col-sm-12">
             <input type="text" pattern="^\S+@\S+$" class="form-control" id="email" placeholder="example@email.com"
                 formControlName="email" required>
-
-            <div *ngIf="createForm.get('email').hasError('required') && createForm.get('email').touched">
-                <ngb-alert [dismissible]="false" type="warning">
-                    <strong> <i class="fa fa-info-circle"></i> Email</strong> is required
-                </ngb-alert>
-            </div>
-
-            <div *ngIf="createForm.get('email').hasError('pattern') && createForm.get('email').touched">
-                <ngb-alert [dismissible]="false" type="warning">
-                    <strong> <i class="fa fa-info-circle"></i> Email</strong> is invalid
-                </ngb-alert>
-            </div>
         </div>
     </div>
 
@@ -51,12 +29,6 @@
         <div class="col-sm-12">
             <input type="text" class="form-control" id="phone" mask="(00) 00000-0000" [clearIfNotMatch]="true"
                 placeholder="(00) 00000-0000" formControlName="phone" required>
-
-            <div *ngIf="createForm.get('phone').hasError('required') && createForm.get('phone').touched">
-                <ngb-alert [dismissible]="false" type="warning">
-                    <strong> <i class="fa fa-info-circle"></i> Phone</strong> is required
-                </ngb-alert>
-            </div>
         </div>
     </div>
 
@@ -66,16 +38,17 @@
         <div class="col-sm-12">
             <input type="password" class="form-control" id="description" placeholder="Password"
                 formControlName="password" required>
-
-            <div *ngIf="createForm.get('password').hasError('required') && createForm.get('password').touched">
-                <ngb-alert [dismissible]="false" type="warning">
-                    <strong> <i class="fa fa-info-circle"></i> Password</strong> is required
-                </ngb-alert>
-            </div>
         </div>
     </div>
 
-    <button type="button" class="btn btn-success btn-lg" [disabled]="createForm.get('name').hasError('required') || 
+    <div class="row center-xs">
+        <div class="col-xs-6">
+
+            <i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
+        </div>
+    </div>
+
+    <!-- <button type="button" class="btn btn-success btn-lg" [disabled]="createForm.get('name').hasError('required') || 
                     createForm.get('last_name').hasError('required') || 
                     createForm.get('email').hasError('required') ||
                     createForm.get('email').hasError('pattern') ||
@@ -84,6 +57,6 @@
                     createForm.get('description').hasError('required') ||
                     createForm.get('password').hasError('required')">
         Create
-    </button>
+    </button> -->
 
 </form>
