--- a/nestjs-front/src/styles.scss
+++ b/nestjs-front/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: #f1f1f1;
+    background-color: white;
+}
+
+body .container-fluid{
+    padding-right: 1rem;
+    padding-left: 0;
 }
