--- a/nestjs-front/src/app/components/auth/auth.component.scss
+++ b/nestjs-front/src/app/components/auth/auth.component.scss
@@ -1,28 +1,71 @@
 
-i {
+.bg-img {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  //display: block;
+  //width: 100%;
+  height: 100vh;
+  background-position: bottom center;
+  background-repeat: repeat;
+  background-size: cover;
+  background-image: url("/assets/ppl.jpg");
+}
+
+
+.action-btn{
     transition: all 0.5s ease-in-out;
-    color: #e2e2e2;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 20px;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
     &:hover {
       transition: all 0.2s ease-in-out;
-      transform: scale(1.1);
-      color: #4ea9ff;
+      background-color: yellow;
+      color: black;
     }
   }
 
   .active-form{
     transition: all 0.2s ease-in-out;
-    transform: scale(1.1);
-    color: #4ea9ff;
+    background-color: yellow;
+    color: black;
   }
 
   .login-box {
-    //margin-top: 10%;
-    margin-right: auto;
-    background-color: #fff;
-    opacity: 1;
-    border-radius: 10px;
     padding: 30px;
     height: 100vh;
   }
+
+  .login-section{
+    padding: 70px;
+    background-color:  black;
+    opacity: 0.7;
+    border-radius: 20px;
+}
+
+label{
+    color: white;
+}
+
+.social-medias{
+    color: white;
+    padding: 30px;
+
+    .social-btn{
+        font-size: 35px;
+    }
+}
+
+.remember-password{
+    color: white;
+    padding: 20px;
+    font-size: 12px;
+}
+
+.login-btn{
+    margin-top: 10px;
+    color: yellow;
+    cursor: pointer;
+}
