--- a/nestjs-front/src/app/components/auth/login/login.component.scss
+++ b/nestjs-front/src/app/components/auth/login/login.component.scss
@@ -1,5 +1,31 @@
-// .login{
-//     //border: 4px solid #f1f1f179;
-//     border-radius: 20px;
-//     padding: 40px;
-// } 
+.login-section{
+    padding: 70px;
+    background-color:  black;
+    opacity: 0.9;
+    border-radius: 20px;
+}
+
+label{
+    color: white;
+}
+
+.social-medias{
+    color: white;
+    padding: 30px;
+
+    i{
+        font-size: 35px;
+    }
+}
+
+.remember-password{
+    color: white;
+    padding: 20px;
+    font-size: 12px;
+}
+
+.login-btn{
+    margin-top: 10px;
+    color: yellow;
+    cursor: pointer;
+}
