--- a/nestjs-front/src/app/components/auth/create/create.component.scss
+++ b/nestjs-front/src/app/components/auth/create/create.component.scss
@@ -1,33 +1,9 @@
-.box{
-    border: 2px solid white;
-    padding: 70px;
-    background: white;
-    border-radius: 10px;
-}
-
-small{
-    color: #e73939;
-    font-weight: bold;
-    margin-left: 5px;
-}
-
-.alert{
-    margin-top: 9px;
-    //width:40%; 
-    font-size: 10px;
-}
-
 label{
     font-size: 12px;
     //font-weight: bold;;
 }
 
-button{
-    margin-top: 20px;
-}
-
-.btn-primary:disabled{
-    background-color: grey;
-    border: 1px solid grey;
-    color: rgb(197, 197, 197);
+i{
+    color: yellow;
+    cursor: pointer;
 }
