--- a/nestjs-front/src/app/components/auth/create/create.component.scss
+++ b/nestjs-front/src/app/components/auth/create/create.component.scss
@@ -1,9 +1,86 @@
-label{
-    font-size: 12px;
-    //font-weight: bold;;
+i{
+    margin-top: 20px;
 }
 
-i{
-    color: yellow;
+.container-radio ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+      overflow: auto;
+  }
+  
+  ul li{
+    color: #AAAAAA;
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 100px;
+      border-bottom: 1px solid #333;
+  }
+  
+  ul li input[type=radio]{
+    position: absolute;
+    visibility: hidden;
+  }
+  
+  ul li label{
+    display: block;
+    position: relative;
+    font-weight: 300;
+    font-size: 1.35em;
+    padding: 25px 25px 25px 80px;
+    margin: 10px auto;
+    height: 30px;
+    z-index: 9;
     cursor: pointer;
-}
+    -webkit-transition: all 0.25s linear;
+  }
+  
+  ul li:hover label{
+      color: #FFFFFF;
+  }
+  
+  ul li .check{
+    display: block;
+    position: absolute;
+    border: 5px solid #AAAAAA;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    top: 30px;
+    left: 20px;
+    z-index: 5;
+    transition: border .25s linear;
+    -webkit-transition: border .25s linear;
+  }
+  
+  ul li:hover .check {
+    border: 5px solid yellow;
+  }
+  
+  ul li .check::before {
+    display: block;
+    position: absolute;
+    content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 0px;
+    left:0px;
+    margin: auto;
+    transition: background 0.25s linear;
+    -webkit-transition: background 0.25s linear;
+  }
+  
+  input[type=radio]:checked ~ .check {
+    border: 5px solid yellow;
+  }
+  
+  input[type=radio]:checked ~ .check::before{
+    background: yellow;
+  }
+  
+  input[type=radio]:checked ~ label{
+    color: yellow;
+  }
